2001-08-21  Zbigniew Chyla  <cyba@gnome.pl>

	* plugin.xml: Removed

	* plugin.xml.in: Copied from plugin.xml, prepared for localization.

	* Makefile.am: Use xml-i18n-tools to create plugin.xml (with
	translations merged from .po file).

2001-08-20  Jody Goldberg <jgoldberg@home.com>

	* Release 0.70

2001-08-11  Jody Goldberg <jgoldberg@home.com>

	* Release 0.69

2001-07-17  Jody Goldberg <jgoldberg@home.com>

	* Release 0.68

2001-06-28  Jody Goldberg <jgoldberg@home>

	* Release 0.67

2001-06-27  Jody Goldberg <jgoldberg@home.com>

	* Release 0.66

2001-05-20  Jody Goldberg <jgoldberg@home.com>

	* Release 0.65

2001-05-08  Jody Goldberg <jgoldberg@home.com>

	* python.c (string_from_exception) : suppress warning.

2001-03-17  Jody Goldberg <jgoldberg@home.com>

	* Release 0.64

2001-02-23  Jody Goldberg <jgoldberg@home.com>

	* Release 0.63

2001-02-16  Jody Goldberg <jgoldberg@home.com>

	* Release 0.62

2001-02-13  Jody Goldberg <jgoldberg@home.com>

	* Makefile.am : Fix target name.

2001-02-12  Karl Eichwalder  <ke@suse.de>

	* Makefile.am (EXTRA_DIST): Add $(gnumeric_plugin_python_DATA).
	(gnumeric_plugin_pythondir): New variable.
	(gnumeric_plugin_python_DATA): Ditto; add plugin.xml.

2000-12-17 Jody Goldberg <jgoldberg@home.com>

	* Release 0.61

2000-12-7  Jody Goldberg <jgoldberg@home.com>

        * Release 0.60

2000-11-18  Jody Goldberg <jgoldberg@home.com>

	* Release 0.59

2000-11-13  Jody Goldberg <jgoldberg@home.com>

        * Release 0.58

2000-10-30  Jody Goldberg <jgoldberg@home.com>

	* python.c : Adjust to changes in CommandContext.

2000-10-10  Jody Goldberg <jgoldberg@home.com>

        * Release 0.57

2000-06-28  Jody Goldberg <jgoldberg@home.com>

	* python.c : Remove symbol.h include.

2000-06-18  Jody Goldberg <jgoldberg@home.com>

        * Release 0.56

2000-06-18  Jody Goldberg <jgoldberg@home.com>

        * Release 0.55

2000-05-26  Jody Goldberg <jgoldberg@home.com>

	* python.c (init_plugin) : rename